[package]
name = "jacarex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored          = "2.0.0"
rustyline-derive = "0.6.0"
rustyline        = "9.1.2"
regex            = "1.5.5"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
